Quorum/Library/Tests/Templating/Pass/GenericParentA.quorum
class GenericParentA<Type>
    action TestA(Type t)
    end
end