Quorum/Library/Tests/Templating/Fail/PrimitiveGenericClass.quorum
class Generic <Type>
    Type value
    action GetValue returns Type
        return value
    end
end